--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="primary-navbar">
         <div class="brand">
          <a href="index.html" title="Go Back to Home page"></a>
-           <img src="images/bold logo ipd.jpg" alt= "ipd logo">
+           <img src="images/bold logo -ipd- round.jpg" alt= "ipd logo">
          </div>
   
 
@@ -47,7 +47,7 @@
       <footer class="primary-footer">
          <div class="brand">
                <a href="index.html" title="Go Back to Home page"></a>
-           <img src="images/bold logo ipd.jpg" alt= "ipd logo">
+           <img src="images/bold logo -ipd- round.jpg" alt= "ipd logo">
          </div>
   
 
