updated css and logo
updated css and logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="primary-navbar">
         <div class="brand">
          <a href="index.html" title="Go Back to Home page"></a>
-           <img src="images/bold logo -ipd- round.jpg" alt= "ipd logo">
+           <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
          </div>
   
 
@@ -35,7 +35,6 @@
         <h1>Infinite Possibilities</h1>
        <p>Making Your Plans Happen!</p>
        <a href="forum.html" title="Go to Sign In">Sign In</a>
-       <img src="images/ipad planner.jpg" alt="ipad planner">
       </section>
 
 
@@ -47,7 +46,7 @@
       <footer class="primary-footer">
          <div class="brand">
                <a href="index.html" title="Go Back to Home page"></a>
-           <img src="images/bold logo -ipd- round.jpg" alt= "ipd logo">
+           <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
          </div>
   
 
