forum and product script added to html

--- a/product.html
+++ b/product.html
@@ -4,8 +4,8 @@
   <!-- HEAD SECTION STARTS -->
 <html>
     <head>
-       <title> Infinite Digital Planners Products</title>
-       <description>Infinite Digital Planners Products</description>
+       <title> Infinite Digital Planners Product</title>
+       <description>Infinite Digital Planners Product</description>
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         
@@ -20,6 +20,8 @@
           <a href="index.html" title="Go Back to Home page">
            <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
           </a>
+            <h1>Infinite Possibilities</h1>
+              <p>Making Your Plans Happen!</p>
         </div>
         <div class="signin">
           <a href="forum.html" title="Go to Sign In">Sign In</a>
@@ -42,7 +44,7 @@
       </section>
 
 
-          </body>
+  </body>
     <!-- BODY SECTION ENDS -->
 
 
