--- a/forum.html
+++ b/forum.html
@@ -4,8 +4,8 @@
   <!-- HEAD SECTION STARTS -->
 <html>
     <head>
-       <title> Infinite Digital Planners Forun/title>
-       <description>Infinite Digital Planners Forum/description>
+       <title> Infinite Digital Planners Forum</title>
+       <description>Infinite Digital Planners Forum</description>
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         
@@ -44,7 +44,7 @@
       </section>
 
 
-          </body>
+  </body>
     <!-- BODY SECTION ENDS -->
 
 
