added additional verbiage
added additional verbiage

--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
 <!-- HEAD SECTION ENDS -->
 
 <!-- BODY SECTION STARTS -->
-  <body>
+   <body>
     <nav class="primary-navbar">
         <div class="brand">
           <a href="index.html" title="Go Back to Home page">
@@ -30,9 +30,9 @@
     </nav>
   
 
-    <section class="hero">
+    <section class="hero-products">
          </div>
-          <ul class="nav-tabs">
+          <ul class="nav-tabs-products">
            <li><a href="forum.html" title="Go to Forum page">Forum</a></li>   
            <li><a href="product.html" title="Go to Product page">Product</a></li>
            <li><a href="vlog.html" title="Got to Vlog page">Vlog</a></li>
@@ -40,11 +40,23 @@
            <li><a href="faq.html" title="Go to FAQ page">FAQ</a></li>
           </ul>
         </div>
+        <div>
+          <a href="product.html" title="purchase">
+            <img src="images/demopkcopy.jpg" alt= "ipad planner image">
+              <p>$5.99 Buy Now!</p>
+            <img src="images/demoorgcopy.jpg" alt= "ipad planner image">
+              <p>$5.99 Buy Now!</p>
+            <img src="images/demogrncopy.jpg" alt= "ipad planner image">
+              <p>$5.99 Buy Now!</p>
+            <img src="images/demodrkgrncopy.jpg" alt= "ipad planner image">
+              <p>$5.99 Buy Now!</p>
+          </a>
+        </div>
 
       </section>
 
 
-  </body>
+          </body>
     <!-- BODY SECTION ENDS -->
 
 
