--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
        <description>Infinite Digital Planners Website</description>
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        
-</head>
+ <meta name="viewport" content="width=device-width, inital-scale=1.0">     
+</head> 
 
 <!-- HEAD SECTION ENDS -->
 
