--- a/forum.html
+++ b/forum.html
@@ -8,7 +8,7 @@
        <description>Infinite Digital Planners Forum</description>
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        
+        <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
 </head>
 
 <!-- HEAD SECTION ENDS -->
