--- a/product.html
+++ b/product.html
@@ -8,6 +8,8 @@
        <description>Infinite Digital Planners Product</description>
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
+
         
 </head>
 
