added pages and took some away
added pages and took some away

--- a/product.html
+++ b/product.html
@@ -32,16 +32,15 @@
     </nav>
   
 
-    <section class="hero-products">
+    <section class="hero">
          </div>
-          <ul class="nav-tabs-products">
+          <ul class="nav-tabs">
            <li><a href="forum.html" title="Go to Forum page">Forum</a></li>   
            <li><a href="product.html" title="Go to Product page">Product</a></li>
-           <li><a href="vlog.html" title="Got to Vlog page">Vlog</a></li>
            <li><a href="about us.html" title="Go to About Us page">About Us</a></li>
-           <li><a href="faq.html" title="Go to FAQ page">FAQ</a></li>
           </ul>
         </div>
+      </section>
         <div>
           <a href="product.html" title="purchase">
             <img src="images/demopkcopy.jpg" alt= "ipad planner image">
