--- a/aboutus.html
+++ b/aboutus.html
@@ -4,17 +4,19 @@
   <!-- HEAD SECTION STARTS -->
 <html>
     <head>
-       <title> Infinite Digital Planners Forum</title>
-       <description>Infinite Digital Planners Forum</description>
+       <title> Infinite Digital Planners Product</title>
+       <description>Infinite Digital Planners Product</description>
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
+
+        
 </head>
 
 <!-- HEAD SECTION ENDS -->
 
 <!-- BODY SECTION STARTS -->
-  <body>
+   <body>
     <nav class="primary-navbar">
         <div class="brand">
           <a href="index.html" title="Go Back to Home page">
@@ -38,11 +40,24 @@
            <li><a href="aboutus.html" title="Go to About Us page">About Us</a></li>
           </ul>
         </div>
+      </section>
+        <div>
+          <a href="product.html" title="purchase">
+            <img src="images/demopkcopy.jpg" alt= "ipad planner image">
+              <p>$5.99 Buy Now!</p>
+            <img src="images/demoorgcopy.jpg" alt= "ipad planner image">
+              <p>$5.99 Buy Now!</p>
+            <img src="images/demogrncopy.jpg" alt= "ipad planner image">
+              <p>$5.99 Buy Now!</p>
+            <img src="images/demodrkgrncopy.jpg" alt= "ipad planner image">
+              <p>$5.99 Buy Now!</p>
+          </a>
+        </div>
 
       </section>
 
 
-  </body>
+          </body>
     <!-- BODY SECTION ENDS -->
 
 
