fixed spacing and script
fixed spacing and script

--- a/product.html
+++ b/product.html
@@ -3,79 +3,76 @@
 
   <!-- HEAD SECTION STARTS -->
 <html>
-    <head>
-       <title> Infinite Digital Planners Product</title>
-       <description>Infinite Digital Planners Product</description>
-        <link href="css/normalize.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
-
-        
-</head>
+  <head>
+    <title> Infinite Digital Planners Product</title>
+    <description>Infinite Digital Planners Product</description>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
+  </head>
 
 <!-- HEAD SECTION ENDS -->
 
 <!-- BODY SECTION STARTS -->
-   <body>
-    <nav class="primary-navbar">
-        <div class="brand">
-          <a href="index.html" title="Go Back to Home page">
-           <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
-          </a>
-            <h1>Infinite Possibilities</h1>
-              <p>Making Your Plans Happen!</p>
-        </div>
-        <div class="signin">
-          <a href="forum.html" title="Go to Sign In">Sign In</a>
-        </div>
-      
-    </nav>
+   
+<body>
+  <nav class="primary-navbar">
+    <div class="brand">
+     <a href="index.html" title="Go Back to Home page">
+      <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
+     </a>
+      <h1>Infinite Possibilities</h1>
+      <p>Making Your Plans Happen!</p>
+    </div>
+     <div class="signin">
+       <a href="forum.html" title="Go to Sign In">Sign In</a>
+     </div>
+  </nav>
   
+  <section class="hero">
+   </div>
+    <ul class="nav-tabs">
+      <li><a href="forum.html" title="Go to Forum page">Forum</a></li>   
+      <li><a href="product.html" title="Go to Product page">Product</a></li>
+      <li><a href="aboutus.html" title="Go to About Us page">About Us</a></li>
+    </ul>
+   </div>
+  </section>
 
-    <section class="hero">
-         </div>
-          <ul class="nav-tabs">
-           <li><a href="forum.html" title="Go to Forum page">Forum</a></li>   
-           <li><a href="product.html" title="Go to Product page">Product</a></li>
-           <li><a href="aboutus.html" title="Go to About Us page">About Us</a></li>
-          </ul>
-        </div>
-      </section>
-        <div>
-          <a href="product.html" title="purchase">
-            <img src="images/demopkcopy.jpg" alt= "ipad planner image">
-              <p>$5.99 Buy Now!</p>
-            <img src="images/demoorgcopy.jpg" alt= "ipad planner image">
-              <p>$5.99 Buy Now!</p>
-            <img src="images/demogrncopy.jpg" alt= "ipad planner image">
-              <p>$5.99 Buy Now!</p>
-            <img src="images/demodrkgrncopy.jpg" alt= "ipad planner image">
-              <p>$5.99 Buy Now!</p>
-          </a>
-        </div>
+ <section> 
+  <div>
+    <a href="product.html" title="purchase">
+      <img src="images/demopkcopy.jpg" alt= "ipad planner image">
+        <p>$5.99 Buy Now!</p>
+      <img src="images/demoorgcopy.jpg" alt= "ipad planner image">
+        <p>$5.99 Buy Now!</p>
+      <img src="images/demogrncopy.jpg" alt= "ipad planner image">
+        <p>$5.99 Buy Now!</p>
+      <img src="images/demodrkgrncopy.jpg" alt= "ipad planner image">
+       <p>$5.99 Buy Now!</p>
+    </a>
+  </div>
+ </section>
+</body>
 
-      </section>
+<!-- BODY SECTION ENDS -->
 
 
-          </body>
-    <!-- BODY SECTION ENDS -->
-
-
-  <!-- FOOTER SECTION STARTS-->
-      <footer class="primary-footer">
-          <div class="logo">
-             <a href="index.html" title="Go Back to Home page">
-               <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
-             </a>
-          </div>
-          <ul class="socialnav"> 
-            <li><a href="http://facebook.com/InfiniteDigitalPlanners" title="Go to Facebook page">Facebook</a></li>
-            <li><a href="http://twitter.com/InfiniteDigitalPlanners" title="Go to Twitter page">Twitter</a></li>
-            <li><a href="http://instagram.com/InfiniteDigitalPlanners" title="Got to Instagram page">Instagram</a></li>
-            <li><a href="http://youtube.com/InfiniteDigitalPlanners" title="Go to Youtube page">Youtube</a></li>
-          </ul>
-        </footer>
-    <!-- FOOTER SECTION ENDS-->
+<!-- FOOTER SECTION STARTS-->
+ <footer class="primary-footer">
+  <div class="logo">
+    <a href="index.html" title="Go Back to Home page">
+     <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
+    </a>
+   </div>
+  <ul class="socialnav"> 
+   <li><a href="http://facebook.com/InfiniteDigitalPlanners" title="Go to Facebook page">Facebook</a></li>
+   <li><a href="http://twitter.com/InfiniteDigitalPlanners" title="Go to Twitter page">Twitter</a></li>
+   <li><a href="http://instagram.com/InfiniteDigitalPlanners" title="Got to Instagram page">Instagram</a></li>
+   <li><a href="http://youtube.com/InfiniteDigitalPlanners" title="Go to Youtube page">Youtube</a></li>
+  </ul>
+ </footer>
+ <!-- FOOTER SECTION ENDS-->
 
 
   <!-- 2021 INFINITE DIGITAL PLANNER -->
