css edits for about us page
css edits for about us page

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
 <html>
   <head>
     <title> Infinite Digital Planners</title>
-      <description>Infinite Digital Planners Website</description>
+      <description>Infinite Digital Planners About Us</description>
         <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
  <meta name="viewport" content="width=device-width, inital-scale=1.0">     
@@ -16,10 +16,10 @@
 <!-- BODY SECTION STARTS -->
   
 <body>
-  <nav class="primary-navbar">
-    <div class="brand">
+  <nav class="primary-navbar-aboutus.">
+    <div class="brand-aboutus">
       <a href="index.html" title="Go Back to Home page">
-        <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
+        <img src="images/bold-logo-ipd-round.png" alt= "ipd logo">
       </a>
         <h1>Infinite Possibilities</h1>
           <p>Making Your Plans Happen!</p>
@@ -28,7 +28,7 @@
       <a href="forum.html" title="Go to Sign In">Sign In</a>
     </div>
     </nav>
-      <section class="hero">
+      <section class="hero-aboutus">
         </div>
           <ul class="nav-tabs">
             <li><a href="forum.html" title="Go to Forum page">Forum</a></li>   
@@ -37,6 +37,16 @@
           </ul>
         </div>
       </section>
+
+
+      <section class="hero-get-to-know-us">
+        <img src="images/aboutus.png" alt= "ipad planner colorful">
+          <h2>We Offer Posibilites</h2>
+            <p> We believe settings goals, daily habits, and getting creative. We offer a simple path for getting orgazined in a chaotic world at times. 
+          
+          Our digital products are meant to help you reach your goals while creating balance in your life. Planning a heavy duty semester or wanting to managing your moneny, we are their to help and inspire!</p>
+       </section>
+
 </body>
    
 <!-- BODY SECTION ENDS -->
@@ -47,7 +57,7 @@
 <footer class="primary-footer">
   <div class="logo">
     <a href="index.html" title="Go Back to Home page">
-      <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
+      <img src="images/bold-logo-ipd-round.png" alt= "ipd logo">
     </a>
   </div>
   <ul class="socialnav"> 
