--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
   <nav class="primary-navbar">
     <div class="brand">
      <a href="index.html" title="Go Back to Home page">
-      <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
+      <img src="images/bold-logo-ipd-round.png" alt= "ipd logo">
      </a>
       <h1>Infinite Possibilities</h1>
       <p>Making Your Plans Happen!</p>
@@ -62,7 +62,7 @@
  <footer class="primary-footer">
   <div class="logo">
     <a href="index.html" title="Go Back to Home page">
-     <img src="images/bold logo -ipd- round copy.png" alt= "ipd logo">
+     <img src="images/bold-logo-ipd-round.png" alt= "ipd logo">
     </a>
    </div>
   <ul class="socialnav"> 
