added image and text to product page
added image and text to product page

--- a/aboutus.html
+++ b/aboutus.html
@@ -16,8 +16,8 @@
 <!-- BODY SECTION STARTS -->
   
 <body>
-  <nav class="primary-navbar-aboutus.">
-    <div class="brand-aboutus">
+  <nav class="primary-navbar">
+    <div class="brand">
       <a href="index.html" title="Go Back to Home page">
         <img src="images/bold-logo-ipd-round.png" alt= "ipd logo">
       </a>
@@ -28,25 +28,22 @@
       <a href="forum.html" title="Go to Sign In">Sign In</a>
     </div>
     </nav>
-      <section class="hero-aboutus">
+      <section class="hero">
         </div>
           <ul class="nav-tabs">
             <li><a href="forum.html" title="Go to Forum page">Forum</a></li>   
             <li><a href="product.html" title="Go to Product page">Product</a></li>
             <li><a href="aboutus.html" title="Go to About Us page">About Us</a></li>
           </ul>
-        </div>
-      </section>
-
-
-      <section class="hero-get-to-know-us">
+    </div>
+    <div class="hero-aboutus">
         <img src="images/aboutus.png" alt= "ipad planner colorful">
-          <h2>We Offer Posibilites</h2>
-            <p> We believe settings goals, daily habits, and getting creative. We offer a simple path for getting orgazined in a chaotic world at times. 
+          <h2>We Offer Possibilites</h2>
+            <p> We believe settings goals, daily habits, and getting creative. We offer a simple path for getting orgazined in a chaotic world at times.</p> 
           
-          Our digital products are meant to help you reach your goals while creating balance in your life. Planning a heavy duty semester or wanting to managing your moneny, we are their to help and inspire!</p>
-       </section>
-
+          <p>Our digital products are meant to help you reach your goals while creating balance in your life. Planning a heavy duty semester or wanting to managing your moneny, we are their to help and inspire!</p>
+    </div>
+      </section>
 </body>
    
 <!-- BODY SECTION ENDS -->
@@ -54,13 +51,13 @@
 
 <!-- FOOTER SECTION STARTS-->
       
-<footer class="primary-footer">
+<footer class="primary-footer-aboutus">
   <div class="logo">
     <a href="index.html" title="Go Back to Home page">
       <img src="images/bold-logo-ipd-round.png" alt= "ipd logo">
     </a>
   </div>
-  <ul class="socialnav"> 
+  <ul class="socialnav-aboutus"> 
     <li><a href="http://facebook.com/InfiniteDigitalPlanners" title="Go to Facebook page">Facebook</a></li>
     <li><a href="http://twitter.com/InfiniteDigitalPlanners" title="Go to Twitter page">Twitter</a></li>
     <li><a href="http://instagram.com/InfiniteDigitalPlanners" title="Got to Instagram page">Instagram</a></li>
