--- a/product.html
+++ b/product.html
@@ -37,22 +37,23 @@
       <li><a href="aboutus.html" title="Go to About Us page">About Us</a></li>
     </ul>
    </div>
-  </section>
-
- <section> 
-  <div>
+  <div class="product-inserts-description">
+    <h1> Download instantly after purchase!</h1>
+      <h2> These weekly inserts will keep you on track in no time!<h2>
+      <p> Quick Tip: Color code your monthly inserts for easy tracking!</p>
+  </div>
+  <div class="product-inserts"> 
     <a href="product.html" title="purchase">
       <img src="images/demopkcopy.jpg" alt= "ipad planner image">
         <p>$5.99 Buy Now!</p>
-      <img src="images/demoorgcopy.jpg" alt= "ipad planner image">
-        <p>$5.99 Buy Now!</p>
-      <img src="images/demogrncopy.jpg" alt= "ipad planner image">
-        <p>$5.99 Buy Now!</p>
-      <img src="images/demodrkgrncopy.jpg" alt= "ipad planner image">
-       <p>$5.99 Buy Now!</p>
+          <img src="images/demoorgcopy.jpg" alt= "ipad planner image">
+            <p>$5.99 Buy Now!</p>
+             <img src="images/demogrncopy.jpg" alt= "ipad planner image">
+             <p>$5.99 Buy Now!</p>
+               <img src="images/demodrkgrncopy.jpg" alt= "ipad planner image">
+                <p>$5.99 Buy Now!</p>
     </a>
   </div>
- </section>
 </body>
 
 <!-- BODY SECTION ENDS -->
