set up landing page text/ image
set up landing page text/ image

--- a/aboutus.html
+++ b/aboutus.html
@@ -38,6 +38,8 @@
     </div>
     <div class="hero-aboutus">
         <img src="images/aboutus.png" alt= "ipad planner colorful">
+    </div>
+    <div class="mission-motto">    
           <h2>We Offer Possibilites</h2>
             <p> We believe settings goals, daily habits, and getting creative. We offer a simple path for getting orgazined in a chaotic world at times.</p> 
           
@@ -51,13 +53,13 @@
 
 <!-- FOOTER SECTION STARTS-->
       
-<footer class="primary-footer-aboutus">
+<footer class="primary-footer">
   <div class="logo">
     <a href="index.html" title="Go Back to Home page">
       <img src="images/bold-logo-ipd-round.png" alt= "ipd logo">
     </a>
   </div>
-  <ul class="socialnav-aboutus"> 
+  <ul class="socialnav"> 
     <li><a href="http://facebook.com/InfiniteDigitalPlanners" title="Go to Facebook page">Facebook</a></li>
     <li><a href="http://twitter.com/InfiniteDigitalPlanners" title="Go to Twitter page">Twitter</a></li>
     <li><a href="http://instagram.com/InfiniteDigitalPlanners" title="Got to Instagram page">Instagram</a></li>
