--- a/index.html
+++ b/index.html
@@ -28,18 +28,23 @@
       <a href="forum.html" title="Go to Sign In">Sign In</a>
     </div>
     </nav>
-      <section class="hero">
-        </div>
+  <section class="hero">
+      <div>
           <ul class="nav-tabs">
             <li><a href="forum.html" title="Go to Forum page">Forum</a></li>   
             <li><a href="product.html" title="Go to Product page">Product</a></li>
             <li><a href="aboutus.html" title="Go to About Us page">About Us</a></li>
           </ul>
     </div>
-    <div>
+    <div class="landing-text">
       <img src="images/ipadplanner.jpg" alt= "ipadplanner image">
+       <h1>Need help organizeing your life?</h1>
+        <li>-Schedule</li>
+        <li>-Social obligation</li>
+        <li>-School courses </li>
+         <h2>We Can Help! </h2>
     </div>
-      </section>
+  </section>
 </body>
    
 <!-- BODY SECTION ENDS -->
