--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     </div>
     <div class="signin">
       <a href="forum.html" title="Go to Sign In">Sign In</a>
+         <label for="fname">Username:</label><br>
+         <input type="text" id="fname" name="fname"><br>
+         <label for="lname">Password:</label><br>
+         <input type="text" id="lname" name="lname">
+        <a href="forum.html">
+           <button>Submit</button>
+        </a>
     </div>
     </nav>
   <section class="hero">
