--- a/product.html
+++ b/product.html
@@ -24,9 +24,15 @@
       <h1>Infinite Possibilities</h1>
       <p>Making Your Plans Happen!</p>
     </div>
-     <div class="signin">
-       <a href="forum.html" title="Go to Sign In">Sign In</a>
-     </div>
+    <div class="signin">
+      <a href="forum.html" title="Go to Sign In">Sign In</a>
+         <label for="fname">Username:</label><br>
+         <input type="text" id="fname" name="fname"><br>
+         <label for="lname">Password:</label><br>
+         <input type="text" id="lname" name="lname">
+        <a href="forum.html">
+           <button>Submit</button>
+        </a>
   </nav>
   
   <section class="hero">
